objects/ASI_GnH_Threshold__c.object
<CustomObject>
    <fields>
        <fullName>ASI_GnH_GnH_Type__c</fullName>
        <label>G&amp;H Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Gifts</fullName>
                </value>
                <value>
                    <fullName>Hospitality</fullName>
                </value>
                <value>
                    <fullName>C&amp;C</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_GnH_Recipient_Type__c</fullName>
        <label>Recipient Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Public Official</fullName>
                </value>
                <value>
                    <fullName>Non Public Official</fullName>
                </value>
                <value>
                    <fullName>Public Official &amp; Media</fullName>
                </value>
                <value>
                    <fullName>Others</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_GnH_Threshold_Amount__c</fullName>
        <label>Threshold Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>ASI GnH Threshold</label>
    <listViews>
        <fullName>ASI_GnH_All_KR_GnH_Offer_Thresholds</fullName>
        <columns>NAME</columns>
        <columns>ASI_GnH_GnH_Type__c</columns>
        <columns>ASI_GnH_Recipient_Type__c</columns>
        <columns>ASI_GnH_Threshold_Amount__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_GnH_Threshold__c.ASI_GnH_KR_GnH_Offer_Threshold</value>
        </filters>
        <label>All KR G&amp;H Offer Thresholds</label>
        <language>en_US</language>
        <sharedTo>
            <group>ASI_GnH_KR_Power_Users</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ASI_GnH_All_KR_GnH_Receive_Thresholds</fullName>
        <columns>NAME</columns>
        <columns>ASI_GnH_GnH_Type__c</columns>
        <columns>ASI_GnH_Recipient_Type__c</columns>
        <columns>ASI_GnH_Threshold_Amount__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_GnH_Threshold__c.ASI_GnH_KR_GnH_Receive_Threshold</value>
        </filters>
        <label>All KR G&amp;H Receive Thresholds</label>
        <language>en_US</language>
        <sharedTo>
            <group>ASI_GnH_KR_Power_Users</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ASI_GnH_All_KR_GnH_Thresholds</fullName>
        <columns>NAME</columns>
        <columns>ASI_GnH_GnH_Type__c</columns>
        <columns>ASI_GnH_Recipient_Type__c</columns>
        <columns>ASI_GnH_Threshold_Amount__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_GnH_Threshold__c.ASI_GnH_KR_GnH_Receive_Threshold,ASI_GnH_Threshold__c.ASI_GnH_KR_GnH_Offer_Threshold</value>
        </filters>
        <label>All KR G&amp;H Thresholds</label>
        <language>en_US</language>
        <sharedTo>
            <group>ASI_GnH_KR_Power_Users</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ASI_GnH_All_TW_GnH_Thresholds</fullName>
        <columns>NAME</columns>
        <columns>ASI_GnH_GnH_Type__c</columns>
        <columns>ASI_GnH_Recipient_Type__c</columns>
        <columns>ASI_GnH_Threshold_Amount__c</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_GnH_Threshold__c.ASI_GnH_TW_GnH_Threshold</value>
        </filters>
        <label>All TW G&amp;H Thresholds</label>
        <language>en_US</language>
        <sharedTo>
            <group>ASI_GnH_TW_Compliance_Officer</group>
            <group>ASI_GnH_TW_IT_Users</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>GnH-TH-{0000}</displayFormat>
        <label>ASI GnH Threshold Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ASI GnH Thresholds</pluralLabel>
    <recordTypes>
        <fullName>ASI_GnH_KR_GnH_Offer_Threshold</fullName>
        <active>true</active>
        <label>ASI GnH KR GnH Offer Threshold</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_GnH_KR_GnH_Receive_Threshold</fullName>
        <active>true</active>
        <label>ASI GnH KR GnH Receive Threshold</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_GnH_TW_GnH_Threshold</fullName>
        <active>true</active>
        <label>ASI GnH TW GnH Threshold</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>